--- a/TintVision/res/layout/activity_overlay_settings.xml
+++ b/TintVision/res/layout/activity_overlay_settings.xml
@@ -1,6 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
@@ -11,8 +11,6 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
@@ -25,15 +23,56 @@
         android:id="@+id/overlayToggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/titleTextView"
-        android:layout_marginLeft="14dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="20dp"
         android:checked="false"
         android:text="@string/toggle"
         android:textSize="@dimen/textMedium"
         android:textStyle="bold" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/opacityTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/opacity"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="@dimen/textMedium"
+        android:textStyle="bold" />
+
+    <SeekBar
+        android:id="@+id/opacityBar"
+        android:layout_width="358dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="80" />
+
+    <TextView
+        android:id="@+id/colourTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/colour"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="@dimen/textMedium"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/colourText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/defaultColour" >
+
+        <requestFocus />
+    </EditText>
+
+</LinearLayout>
