--- a/TintVision/res/values/dimens.xml
+++ b/TintVision/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="textMedium">28dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="titleText">32dp</dimen>
 
 </resources>
