--- a/TintVision/res/layout/activity_underliner_settings.xml
+++ b/TintVision/res/layout/activity_underliner_settings.xml
@@ -1,7 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/GridLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:columnCount="2"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,13 +13,10 @@
 
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="start"
+        android:layout_row="0"
         android:gravity="center_horizontal"
         android:text="@string/underliner_settings"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -25,51 +25,22 @@
 
     <Switch
         android:id="@+id/underlinerToggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/thicknessTextView"
-        android:layout_alignRight="@+id/titleTextView"
-        android:layout_below="@+id/titleTextView"
-        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="start"
+        android:layout_marginTop="20dp"
+        android:layout_row="1"
         android:text="@string/toggle"
         android:textSize="@dimen/textMedium"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/thicknessTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/titleTextView"
-        android:layout_alignStart="@+id/titleTextView"
-        android:layout_below="@+id/underlinerToggle"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/thickness"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="@dimen/textMedium"
-        android:textStyle="bold" />
-
-    <SeekBar
-        android:id="@+id/thicknessSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/colourTextView"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@+id/thicknessTextView"
-        android:layout_toRightOf="@+id/thicknessTextView"
-        android:max="20"
-        android:progress="10" />
-
-    <TextView
         android:id="@+id/colourTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/titleTextView"
-        android:layout_alignStart="@+id/colourText"
-        android:layout_below="@+id/thicknessTextView"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="116dp"
+        android:layout_column="0"
+        android:layout_gravity="start"
+        android:layout_marginTop="20dp"
+        android:layout_row="19"
         android:text="@string/colour"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/textMedium"
@@ -77,10 +48,11 @@
 
     <EditText
         android:id="@+id/colourText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/titleTextView"
-        android:layout_below="@+id/colourTextView"
+        android:layout_width="230dp"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="20"
         android:ems="10"
         android:inputType="text"
         android:text="@string/defaultUnderlinerColour" >
@@ -88,27 +60,51 @@
         <requestFocus />
     </EditText>
 
-    <SeekBar
-        android:id="@+id/widthSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignRight="@+id/underlinerToggle"
-        android:layout_alignStart="@+id/thicknessSeekBar"
-        android:layout_below="@+id/thicknessTextView"
-        android:layout_marginTop="18dp"
-        android:max="600"
-        android:progress="400" />
+    <Space
+        android:layout_column="1"
+        android:layout_gravity="fill_vertical"
+        android:layout_row="23" />
 
     <TextView
         android:id="@+id/widthTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/thicknessTextView"
-        android:layout_alignTop="@+id/widthSeekBar"
+        android:layout_column="0"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginTop="20dp"
+        android:layout_row="16"
         android:text="@string/width"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/textMedium"
         android:textStyle="bold" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/thicknessTextView"
+        android:layout_column="0"
+        android:layout_gravity="start|top"
+        android:layout_marginTop="20dp"
+        android:layout_row="4"
+        android:text="@string/thickness"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="@dimen/textMedium"
+        android:textStyle="bold" />
+
+    <SeekBar
+        android:id="@+id/widthSeekBar"
+        android:layout_width="140dp"
+        android:layout_column="1"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginTop="18dp"
+        android:layout_row="16"
+        android:max="600"
+        android:progress="400" />
+
+    <SeekBar
+        android:id="@+id/thicknessSeekBar"
+        android:layout_width="140dp"
+        android:layout_column="1"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginTop="18dp"
+        android:layout_row="4"
+        android:max="20"
+        android:progress="10" />
+
+</GridLayout>
