--- a/TintVision/res/values/colors.xml
+++ b/TintVision/res/values/colors.xml
@@ -2,5 +2,6 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="blue_button">#0066FF</color>
+    <color name="grey_button">#FFCCCC</color>
 
 </resources>
