--- a/AndroidStudio/TintVision/app/src/main/res/layout/activity_underliner_settings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/layout/activity_underliner_settings.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tintvision.UnderlinerSettingsActivity" >
+    android:background="#9EBBCC"
+    tools:context="com.emcreations.tintvision.UnderlinerSettingsActivity" >
 
     <TextView
         android:id="@+id/titleTextView"
@@ -21,7 +22,9 @@
         android:text="@string/underliner_settings"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/titleText"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_width="match_parent" />
 
     <Switch
         android:id="@+id/underlinerToggle"
@@ -33,7 +36,8 @@
         android:layout_row="1"
         android:text="@string/toggle"
         android:textSize="@dimen/textMedium"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/colourTextView"
@@ -44,7 +48,8 @@
         android:text="@string/colour"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/textMedium"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/widthTextView"
@@ -55,7 +60,8 @@
         android:text="@string/width"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/textMedium"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/thicknessTextView"
@@ -66,7 +72,8 @@
         android:text="@string/thickness"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/textMedium"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <SeekBar
         android:id="@+id/widthSeekBar"
@@ -76,17 +83,9 @@
         android:layout_marginTop="18dp"
         android:layout_row="5"
         android:max="600"
-        android:progress="400" />
-
-    <SeekBar
-        android:id="@+id/thicknessSeekBar"
-        android:layout_width="140dp"
-        android:layout_column="1"
-        android:layout_gravity="start|center_vertical"
-        android:layout_marginTop="18dp"
-        android:layout_row="4"
-        android:max="20"
-        android:progress="10" />
+        android:progress="400"
+        style="@android:style/Widget.SeekBar"
+        android:layout_height="wrap_content" />
 
     <Button
         android:text="@string/pick_colour"
@@ -102,5 +101,17 @@
         android:layout_width="wrap_content"
         android:layout_height="255dp"
         android:minHeight="170dp" />
+
+    <SeekBar
+        android:id="@+id/thicknessSeekBar"
+        android:layout_width="140dp"
+        android:layout_column="1"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginTop="18dp"
+        android:layout_row="4"
+        android:max="20"
+        android:progress="10"
+        style="@android:style/Widget.SeekBar"
+        android:layout_height="wrap_content" />
 
 </GridLayout>
