--- a/AndroidStudio/TintVision/app/src/main/res/layout/activity_home.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout2"
+    android:id="@+id/LinearLayoutHome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9EBBCC"
@@ -16,7 +16,7 @@
         android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/buttonText"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
     <Button
@@ -28,7 +28,7 @@
         android:layout_weight="0.40"
         android:background="@drawable/custom_button"
         android:text="@string/overlay_settings"
-        android:textSize="@dimen/buttonText"
+        android:textSize="36sp"
         android:textStyle="bold"
         android:textColor="@color/yellow_text" />
 
@@ -41,7 +41,7 @@
         android:layout_weight="0.40"
         android:background="@drawable/custom_button2"
         android:text="@string/underliner_settings"
-        android:textSize="@dimen/buttonText"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
 </LinearLayout>
