--- a/AndroidStudio/TintVision/app/src/main/res/layout/activity_overlay_settings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/layout/activity_overlay_settings.xml
@@ -1,6 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/ScrollViewOverlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9EBBCC"
@@ -8,77 +8,82 @@
     tools:context="com.emcreations.tintvision.HomeActivity"
     android:weightSum="1">
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:text="@string/overlay_settings"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/titleText"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <Switch
-        android:id="@+id/overlayToggle"
-        android:layout_width="361dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="20dp"
-        android:checked="false"
-        android:text="@string/toggle"
-        android:textSize="@dimen/textMedium"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:text="@string/overlay_settings"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="bold"
+                android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/opacityTextView"
-        android:layout_width="138dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/opacity"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="@dimen/textMedium"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+            <Switch
+                android:id="@+id/overlayToggle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="20dp"
+                android:checked="false"
+                android:text="@string/toggle"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
 
-    <SeekBar
-        android:id="@+id/opacityBar"
-        android:layout_width="358dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="80"
-        style="@android:style/Widget.SeekBar" />
+            <TextView
+                android:id="@+id/opacityTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/opacity"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
 
-    <TextView
-        android:id="@+id/colourTextView"
-        android:layout_width="129dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/colour"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="@dimen/textMedium"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+            <SeekBar
+                android:id="@+id/opacityBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:indeterminate="false"
+                android:max="100"
+                android:progress="80"
+                style="@android:style/Widget.SeekBar" />
 
-    <Button
-        android:text="@string/pick_colour"
-        android:layout_width="346dp"
-        android:layout_height="110dp"
-        android:id="@+id/buttonOverlayColour"
-        tools:text="@string/pick_colour"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+            <TextView
+                android:id="@+id/colourTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/colour"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
 
-</LinearLayout>
+            <Button
+                android:text="@string/pick_colour"
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
+                android:id="@+id/buttonOverlayColour"
+                tools:text="@string/pick_colour"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" />
+        </LinearLayout>
+</ScrollView>
