Update: Restructured code.

--- a/AndroidStudio/TintVision/app/src/main/res/layout/activity_overlay_settings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/layout/activity_overlay_settings.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#9EBBCC"
     android:orientation="vertical"
-    tools:context="com.emcreations.tintvision.HomeActivity"
+    tools:context="com.emcreations.tintvision.activity.HomeActivity"
     android:weightSum="1">
 
         <LinearLayout
