--- a/AndroidStudio/TintVision/app/src/main/res/layout/activity_underliner_settings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/layout/activity_underliner_settings.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#9EBBCC"
-    tools:context="com.emcreations.tintvision.UnderlinerSettingsActivity" >
+    tools:context="com.emcreations.tintvision.activity.UnderlinerSettingsActivity" >
 
         <GridLayout
             android:layout_width="match_parent"
